--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.63a26457.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://amv1017.github.io/multiplication-table-quiz/assets/favicon.63a26457.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Таблица умножения</title>
-    <script type="module" crossorigin src="/assets/index.323ad776.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.42b205fa.js">
-    <link rel="stylesheet" href="/assets/index.679633c9.css">
+    <script type="module" crossorigin src="https://amv1017.github.io/multiplication-table-quiz/assets/index.270978af.js"></script>
+    <link rel="modulepreload" href="https://amv1017.github.io/multiplication-table-quiz/assets/vendor.2db46764.js">
+    <link rel="stylesheet" href="https://amv1017.github.io/multiplication-table-quiz/assets/index.679633c9.css">
   </head>
   <body>
     <div id="root"></div>
