--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://amv1017.github.io/multiplication-table-quiz/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Таблица умножения</title>
-    <script type="module" crossorigin src="https://amv1017.github.io/multiplication-table-quiz/assets/index.5c5e636b.js"></script>
-    <link rel="modulepreload" href="https://amv1017.github.io/multiplication-table-quiz/assets/vendor.de29d1e7.js">
-    <link rel="stylesheet" href="https://amv1017.github.io/multiplication-table-quiz/assets/index.da812310.css">
   </head>
   <body>
     <div id="root"></div>
-    
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
